--- a/templates/page_program/program_kpi.html
+++ b/templates/page_program/program_kpi.html
@@ -9,5 +9,12 @@
 {% block body_tabs %}{% tabs_for_program page user program %}{% endblock %}
 
 {% block body_content %}
+<div class="ss_control_panel">
+    <ul>
+        <li><img src="{{MEDIA_URL}}/images/icons/manage.png" class="icon"/><a href="{% url view_master_plan_manage_program_kpi program.id %}?{% back_to_this request %}">จัดการแผนผลลัพธ์</a></li>
+    </ul>
+</div>
+
+<!-- TODO -->
 
 {% endblock %}
