--- a/templates/page_program/components/component_modify_project.html
+++ b/templates/page_program/components/component_modify_project.html
@@ -23,6 +23,11 @@
             <div class="input LONG">{{form.abbr_name}}</div>
             {{form.abbr_name.errors}}
         </li>
+		<li>
+            <label for="id_abbr_name" class="caption">{{form.abbr_name.label}}</label>
+            <div class="input LONG">{{form.abbr_name}}</div>
+            {{form.abbr_name.errors}}
+        </li>
         <li class="date_period">
             <label class="caption">{{form.start_date.label}}</label>
             <div class="input">{{form.start_date}} <span class="to">{{form.end_date.label}}</span> {{form.end_date}}</div>
@@ -38,4 +43,17 @@
     {{form.program_id}}
     {{form.project_id}}
     <div class="button_panel"><button type="submit">ตกลง</button></div>
+	
+	{% if project %}
+	<div class="delete_link">
+		<img src="{{MEDIA_URL}}/images/icons/delete.png" class="icon"/>
+		
+		{% if project.removable %}
+        <a href="{% url view_project_delete_project project.id %}" title="ลบโครงการ" class="delete-project">ลบโครงการ</a>
+        {% else %}
+		<span>ลบโครงการ</span>
+		<div class="note">* ไม่สามารถลบโครงการที่มีกิจกรรมได้ ลบกิจกรรมออกให้หมดก่อนลบโครงการ</div>
+        {% endif %}
+	</div>
+	{% endif %}
 </form>
