--- a/templates/page_sector/manage_master_plan/manage_kpi.html
+++ b/templates/page_sector/manage_master_plan/manage_kpi.html
@@ -9,5 +9,86 @@
 {% block body_tabs %}{% tabs_for_manage_master_plan page master_plan %}{% endblock %}
 
 {% block body_content %}
+<div class="ss_section">
+	<ul>
+		<li class="selected">ตัวชี้วัดแผนหลัก</li>
+		<li><a href="{% url view_master_plan_manage_kpi_category master_plan.ref_no %}">ประเภทตัวชี้วัด</a></li>
+	</ul>
+</div>
 
+<div class="ss_control_panel">
+    <ul>
+        <li><img src="{{MEDIA_URL}}/images/icons/create.png" class="icon"/><a href="{% url view_master_plan_manage_kpi_add_kpi master_plan.ref_no %}">เพิ่มตัวชี้วัดแผนหลัก</a></li>
+    </ul>
+</div>
+
+<div class="master_plan_manage master_plan_manage_kpi">
+	{% if year_choices %}
+	<div class="kpi_year_choices">
+		<span>ตัวชี้วัดสำหรับปี</span>
+		<select>
+			{% for choice in year_choices %}
+			<option>{{choice}}</option>
+			{% endfor %}
+		</select>
+	</div>
+	
+	{% for kpi_category in kpi_categories %}
+	<h2>{{kpi_category.name}}</h2>
+	<table class="ss_table">
+        <tr>
+            <th class="controls"></th>
+			<th class="ref_no">รหัส</th>
+			<th class="name">ชื่อตัวชี้วัด</th>
+			<th class="unit_name">หน่วย</th>
+        </tr>
+        {% for kpi in kpi_category.kpis %}
+        <tr>
+            <td class="controls">
+                <a href="{% url view_master_plan_manage_kpi_edit_kpi kpi.id %}" title="แก้ไขตัวชี้วัด"><img src="{{MEDIA_URL}}/images/icons/edit.png" class="icon" /></a>
+                {% if category.removable %}
+                <a href="{% url view_master_plan_manage_kpi_delete_kpi kpi.id %}" title="ลบตัวชี้วัด" class="delete-kpi"><img src="{{MEDIA_URL}}/images/icons/delete.png" class="icon" /></a>
+                {% else %}
+                <img src="{{MEDIA_URL}}/images/icons/delete_disabled.png" class="icon" title="ตัวชี้วัดนี้ยังผูกอยู่กับแผนงาน"/>
+                {% endif %}
+            </td>
+            <td class="ref_no">{{kpi.ref_no}}</td>
+            <td class="name">{{kpi.name}}</td>
+            <td class="unit_name">{{kpi.unit_name}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+	{% endfor %}
+	
+	{% if no_category_kpis %}
+	<h2 class="no_category">[ ตัวชี้วัดที่ไม่มีประเภท ]</h2>
+	<table class="ss_table">
+        <tr>
+            <th class="controls"></th>
+            <th class="ref_no">รหัส</th>
+            <th class="name">ชื่อตัวชี้วัด</th>
+            <th class="unit_name">หน่วย</th>
+        </tr>
+        {% for kpi in no_category_kpis %}
+        <tr>
+            <td class="controls">
+                <a href="{% url view_master_plan_manage_kpi_edit_kpi kpi.id %}" title="แก้ไขตัวชี้วัด"><img src="{{MEDIA_URL}}/images/icons/edit.png" class="icon" /></a>
+                {% if category.removable %}
+                <a href="{% url view_master_plan_manage_kpi_delete_kpi kpi.id %}" title="ลบตัวชี้วัด" class="delete-kpi"><img src="{{MEDIA_URL}}/images/icons/delete.png" class="icon" /></a>
+                {% else %}
+                <img src="{{MEDIA_URL}}/images/icons/delete_disabled.png" class="icon" title="ตัวชี้วัดนี้ยังผูกอยู่กับแผนงาน"/>
+                {% endif %}
+            </td>
+            <td class="ref_no">{{kpi.ref_no}}</td>
+            <td class="name">{{kpi.name}}</td>
+            <td class="unit_name">{{kpi.unit_name}}</td>
+        </tr>
+        {% endfor %}
+    </table>
+	{% endif %}
+	
+	{% else %}
+	<div class="ss_no_information">ไม่มีตัวชี้วัดแผนหลัก</div>
+	{% endif %}
+</div>
 {% endblock %}
