--- a/media/css/styles.global.css
+++ b/media/css/styles.global.css
@@ -3,6 +3,7 @@
 .icon {vertical-align:middle;}
 
 .ss_no_information {font-size:116%;color:#666;margin:10px 0px 20px;}
+.ss_prerequisite {margin:0px 0px 20px 0px;font-size:108%;color:#966;}
 
 a:link, a:visited, a:active {color:#07A;}
 a:hover {color:#FFF;background-color:#369;}
@@ -60,17 +61,17 @@ a:hover {color:#FFF;background-color:#369;}
 
 /* Control Panel */
 .ss_control_panel {margin:5px 0px 15px;}
-.ss_control_panel ul {border-bottom:2px solid #999;background-color:#68AAB1;}
-.ss_control_panel ul li {font-size:108%;color:#FFF;padding:8px 15px;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
+.ss_control_panel ul {border-bottom:1px solid #999;background-color:#B2D2D7;}
+.ss_control_panel ul li {font-size:108%;color:#333;padding:8px 15px;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
 .ss_control_panel ul li img {margin-right:5px;vertical-align:middle;}
-.ss_control_panel ul li a {color:#FFF !important;}
-.ss_control_panel ul li a:hover {}
+.ss_control_panel ul li a {color:#333 !important;}
+.ss_control_panel ul li a:hover {color:#FFF !important;}
 
 /* Page Section */
-.ss_section {border-bottom:1px solid #CCC;margin:5px 0px 20px;}
+.ss_section {margin:0px 0px 20px;border-bottom:1px solid #CCC;}
 .ss_section ul {border-bottom:1px solid #999;}
-.ss_section li {margin-bottom:8px;padding:8px 15px 5px;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
-.ss_section li.selected {background-color:#A35229;color:#FFF;}
+.ss_section li {margin-bottom:8px;border:1px solid #DDD;padding:10px 15px 7px 15px;margin-right:2px;font-size:116%;background-color:#DDD;display:inline-block;display:-moz-inline-stack;*display:inline;list-style:none;zoom:1;}
+.ss_section li.selected {color:#ED6912;background-color:#FFF;}
 .ss_section li a {color:#666;}
 .ss_section li a:hover {color:#FFF;}
 
