--- a/templates/page_sector/manage_master_plan/manage_organization_modify_plan.html
+++ b/templates/page_sector/manage_master_plan/manage_organization_modify_plan.html
@@ -9,7 +9,7 @@
 
 {% block body_content %}
 <div class="ss_breadcrumbs">
-    <div class="breadcrumbs"><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">หน้าแผนงาน</a> &#187;</div>
+    <div class="breadcrumbs"><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">หน้าจัดการแผนงาน</a> &#187;</div>
     <h2>{% if master_plan %}แก้ไขกลุ่มแผนงาน{% else %}เพิ่มกลุ่มแผนงาน{% endif %}</h2>
 </div>
 
