--- a/templates/page_sector/manage_master_plan/manage_program_kpi.html
+++ b/templates/page_sector/manage_master_plan/manage_program_kpi.html
@@ -4,8 +4,138 @@
 {% block html_head %}
 <script type="text/javascript">
 $(document).ready(function() {
+    $("#kpi-selector").change(function(e) {
+        var selectedOption = $(this).find("option:selected");
+        var kpi_id = $(this).val();
+		
+		var kpi_data = $("#kpi-data-"+kpi_id);
+		var kpi_year = kpi_data.find(".year").text();
+		var kpi_category = kpi_data.find(".category").text();
+		var kpi_ref_no = kpi_data.find(".ref_no").text();
+		var kpi_name = kpi_data.find(".name").text();
+		var kpi_unit = kpi_data.find(".unit").text();
+		
+		var kpi_topname = "";
+		if(kpi_category != "") {
+			kpi_topname = kpi_year + " - " + kpi_category;
+		} else {
+			kpi_topname = kpi_year;
+		}
+		
+        var new_row = $('<tr class="table-schedule" id="schedule-' + kpi_id + '-none"><td class="controls"><a href="#" class="remove-schedule">ลบแถว</a></td><td class="kpi_column"><div class="kpi_category">' + kpi_topname + '</div><div class="kpi_name">(' + kpi_ref_no + ') ' + kpi_name + '</div></td><td class="target_column"><input type="text"/><div>' + kpi_unit + '</div></td><td class="quarter_column">' + $("#kpi_schedule_template").html() + '</td></tr>');
+        initializeRowEvents(new_row);
+        
+        new_row.insertAfter($(".table-header"));
+		
+		$("#kpi-selector option:first").attr("selected", "selected");
+		new_row.find(".target_column input").focus();
+    });
     
+    $(".table-schedule").each(function() {
+        initializeRowEvents($(this));
+    });
+    
+    $("form button[type='submit']").click(function() {
+        var is_valid = true;
+        $(".error_message.invalid_input").hide();
+        
+        $(".table-schedule").each(function() {
+			var kpi_id = $(this).attr("id").split("-")[1];
+			var schedule_id = $(this).attr("id").split("-")[2];
+			
+            // Target
+            var target = $(this).find(".target_column input").val();
+            if(target == "") {
+                is_valid = false;
+                $(this).find(".target_column input").addClass("invalid");
+                $(".error_message.invalid_input").show();
+            } else {
+                target = to_number(target);
+                if(target == null) {
+                    is_valid = false;
+                    $(this).find(".target_column input").addClass("invalid");
+                    $(".error_message.invalid_input").show();
+                } else {
+                    $(this).find(".target_column input").removeClass("invalid");
+                }
+            }
+            
+            // Target Quarter
+            var quarter_year = $(this).find(".quarter_column .quarter_year").val();
+            var quarter_month = $(this).find(".quarter_column .quarter_month").val();
+            
+            if(quarter_year == "" || quarter_month == "") {
+                is_valid = false;
+                $(this).find(".quarter_column select").addClass("invalid");
+                $(".error_message.invalid_input").show();
+            } else {
+                $(this).find(".quarter_column select").removeClass("invalid");
+            }
+            
+            if(is_valid) {
+                var schedule_text = kpi_id + "," + schedule_id + "," + target + "," + quarter_year + "," + quarter_month;
+                $("form").append('<input type="hidden" name="schedule" value="' + schedule_text + '" />');
+            }
+        });
+        
+        return is_valid;
+    });
 });
+
+function initializeRowEvents(row_obj) {
+	row_obj.find(".target_column input").digits()
+    
+    row_obj.find(".remove-schedule").click(function(e) {
+        e.preventDefault();
+        if(window.confirm("ยืนยันการลบ?")) {
+            $(this).closest("tr").remove();
+        }
+    });
+    
+    row_obj.find(".quarter_column .quarter_year").change(function(e) {
+        var YEAR_OFFSET = 5;
+        
+        var selected_year = $(this).val();
+        
+        if(selected_year.substring(0,4) == 'back') {
+            selected_year = parseInt(selected_year.split('-')[1]) - YEAR_OFFSET;
+        } else if (selected_year.substring(0,4) == 'next') {
+            selected_year = parseInt(selected_year.split('-')[1]) + YEAR_OFFSET;
+        } else {
+            selected_year = parseInt(selected_year);
+        }
+        
+        var new_list_html = "";
+        for(var i=-YEAR_OFFSET-1; i<=YEAR_OFFSET+1; i++) {
+            if(i==0) {
+                new_list_html = new_list_html + '<option selected="selected">' + (selected_year+i) + '</option>';
+            } else if(i==-YEAR_OFFSET-1) {
+                new_list_html = new_list_html + '<option value="back-' + (selected_year-YEAR_OFFSET) + '">&lt; ปีก่อนหน้า</option>';
+            } else if(i==YEAR_OFFSET+1) {
+                new_list_html = new_list_html + '<option value="next-' + (selected_year+YEAR_OFFSET) + '">ปีถัดไป &gt;</option>';
+            } else {
+                new_list_html = new_list_html + '<option>' + (selected_year+i) + '</option>';
+            }
+        }
+        
+        $(this).html(new_list_html);
+        
+        // Change quarter list
+        new_list_html = "";
+        var quarter_month_select = $(this).parent().parent().find(".quarter_month");
+        var counter = 1;
+        quarter_month_select.find("option").each(function() {
+            var text = $(this).text();
+            if(counter == 1) {
+                new_list_html = new_list_html + '<option value="' + counter + '">' + text.substring(0, text.length-4) + (selected_year-1) + '</option>';
+            } else {
+                new_list_html = new_list_html + '<option value="' + counter + '">' + text.substring(0, text.length-4) + selected_year + '</option>';
+            }
+            counter = counter + 1;
+        });
+        quarter_month_select.html(new_list_html);
+    });
+}
 </script>
 {% endblock %}
 
@@ -14,12 +144,85 @@ $(document).ready(function() {
 
 {% block body_content %}
 <div class="ss_breadcrumbs">
-    <div class="breadcrumbs"><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">หน้าแผนงาน</a> &#187;</div>
+    <div class="breadcrumbs"><a href="{% url view_master_plan_manage_organization master_plan.ref_no %}">หน้าจัดการแผนงาน</a> &#187;</div>
     <div class="supertitle">({{program.ref_no}}) {{program.name}}</div>
     <h2>จัดการแผนผลลัพธ์</h2>
 </div>
 
-<div class="master_plan_manage">
+<div class="master_plan_manage master_plan_manage_program_kpi">
+	
+	{% if not kpi_choices %}
+	<div class="ss_prerequisite">ไม่มีตัวชี้วัดของแผน เพิ่มตัวชี้วัดได้จากหน้า <a href="{% url view_master_plan_manage_kpi_add_kpi master_plan.ref_no %}?{% back_to_this request %}">เพิ่มตัวชี้วัดแผน</a></div>
+	{% else %}
+	<div class="error_message invalid_input" style="display:none;">ข้อมูลไม่ครบถ้วนหรือไม่อยู่ในรูปแบบที่ถูกต้อง</div>
+	
+	<table>
+		<tr>
+            <td class="controls"></td>
+            <td colspan="3" class="choices_cell">
+                <label for="kpi-selector">เพิ่มรายการจาก</label>
+                <select id="kpi-selector">
+                	<option></option>
+                	{% for kpi in kpi_choices %}
+                    <option value="{{kpi.id}}">{{kpi.year|add:543}} - {% if kpi.category %}{{kpi.category.name}} - {% endif %}({{kpi.ref_no}}) {{kpi.name}}</option>
+					{% endfor %}
+                </select>
+            </td>
+        </tr>
+		<tr class="table-header">
+			<th class="controls"></th>
+			<th class="kpi_column">ชื่อตัวชี้วัด</th>
+			<th class="target_head_column">ตัวเลขคาดการณ์</th>
+			<th class="quarter_head_column">ช่วงเวลา</th>
+		</tr>
+		{% for schedule in kpi_schedules %}
+		<tr class="table-schedule" id="schedule-{{schedule.kpi.id}}-{{schedule.id}}">
+			<td class="controls"><a href="#" class="remove-schedule">ลบแถว</a></td>
+			<td class="kpi_column">
+				<div class="kpi_category">{{schedule.kpi.year|add:543}} {% if schedule.kpi.category %}- {{schedule.kpi.category.name}}{% endif %}</div>
+				<div class="kpi_name">({{schedule.kpi.ref_no}}) {{schedule.kpi.abbr_name}}</div>
+			</td>
+			<td class="target_column">
+				<input type="text" value="{{schedule.target|intcomma}}"/>
+				<div>{{schedule.kpi.unit_name}}</div>
+			</td>
+			<td class="quarter_column">
+				<span>
+                    <label>เดือน</label> <select class="quarter_month">{% generate_quarter_month_selector schedule.quarter schedule.quarter_year %}</select>
+                </span>
+                <span>
+                    <label>ปี</label> <select class="quarter_year">{% generate_quarter_year_selector schedule.quarter_year %}</select>
+                </span>
+			</td>
+		</tr>
+		{% endfor %}
+	</table>
+	
+	<form action="." method="POST" class="ss_form">
+        {% csrf_token %}
+        <div class="button_panel"><button type="submit">บันทึกการแก้ไข</button></div>
+    </form>
+	{% endif %}
+</div>
 
+<ul style="display:none;">
+	{% for kpi in kpi_choices %}
+	<li id="kpi-data-{{kpi.id}}">
+		<span class="year">{{kpi.year|add:543}}</span>
+		<span class="category">{{kpi.category.name}}</span>
+		<span class="ref_no">{{kpi.ref_no}}</span>
+		<span class="name">{{kpi.abbr_name}}</span>
+		<span class="unit">{{kpi.unit_name}}</span>
+	</li>
+	{% endfor %}
+</ul>
+
+<div id="kpi_schedule_template" style="display:none;">
+    <span>
+        <label>เดือน</label> <select class="quarter_month">{% generate_quarter_month_selector 1 '' %}</select>
+    </span>
+    <span>
+        <label>ปี</label> <select class="quarter_year">{% generate_quarter_year_selector '' %}</select>
+    </span>
 </div>
 {% endblock %}
