--- a/templates/page_sector/manage_master_plan/manage_organization.html
+++ b/templates/page_sector/manage_master_plan/manage_organization.html
@@ -63,7 +63,7 @@ $(document).ready(function() {
 								<li><img src="{{MEDIA_URL}}/images/icons/row_edit_small.png" class="icon" /> <a href="{% url view_master_plan_edit_program program.id %}">แก้ไข</a></li>
 								<li><a href="{% url view_master_plan_manage_program_kpi program.id %}">จัดการแผนผลลัพธ์</a></li>
 								<li><a href="{% url view_master_plan_manage_program_budget program.id %}">จัดการแผนการเงิน</a></li>
-								<li><a href="#">รายงานที่ต้องส่ง</a></li>
+								<li><a href="{% url view_master_plan_manage_program_report program.id %}">รายงานที่ต้องส่ง</a></li>
 							    <li>
 							    	{% if program.removable %}
 		                            <a href="{% url view_master_plan_delete_program program.id %}" class="delete-program">ลบแผนงาน</a>
